--- a/src/_includes/tool.njk
+++ b/src/_includes/tool.njk
@@ -5,7 +5,7 @@ layout: base
 <main>
   <article>
     <h1>{{ title }}</h1>
-    {{ description }}
+    <description>{{ description }}</description>
     {{ content | safe }}
   </article>
 </main>
