--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -6,6 +6,8 @@ layout: base
   <article>
     <h1>{{ title }}</h1>
     <time datetime="{{ date }}">{{ date | dateJP }}</time>
+    <hr class="section-divider" />
+    <br />
     {{ content | safe }}
   </article>
 </main>
