fix: update base URL references and clean up CSS styles

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="{{ baseUrl }}/style.css" />
-    <link rel="icon" href="{{ baseUrl }}/images/favicon.ico">
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,13 +21,13 @@
     <header class="home-header">
       <nav class="nav-links">
         <div>
-          <a href="{{ baseUrl }}/" class="nav-link"
+          <a href="/" class="nav-link"
             ></i> home</a
           >
-          <a href="{{ baseUrl }}/about" class="nav-link"
+          <a href="/about" class="nav-link"
             ></i> about</a
           >
-          <a href="{{ baseUrl }}/gallery" class="nav-link"
+          <a href="/gallery" class="nav-link"
             ></i> gallery</a
           >
           <a href="https://github.com/ploptaw" class="nav-link"
