delete: remove unused image files and update index.njk for cleaner HTML

--- a/src/gallery.njk
+++ b/src/gallery.njk
@@ -14,7 +14,7 @@ title: ギャラリー
         class="pixel-art"
       />
       <h3>{{ image.title }}</h3>
-      <p class="gallery-description">{{ image.description }}</p>
+      <p class="gallery-alt">{{ image.alt }}</p>
     </div>
     {%- endfor -%}
   </div>
