--- a/src/gallery.njk
+++ b/src/gallery.njk
@@ -10,7 +10,7 @@ title: ギャラリー
     <div class="gallery-card">
       <img
         src="/{{ image.image_path }}"
-        alt="{{ image.title }}"
+        alt="Image of {{ image.title }}"
         class="pixel-art"
       />
       <h3>{{ image.title }}</h3>
