--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,6 +17,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
+      style="font-display: swap;"
     />
   </head>
   <body>
