--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,6 +5,7 @@
     <title>{{ title }}</title>
     <meta name="description" content="{{ description or 'blog' }}" />
     <meta name="keywords" content="minecraft, pixel-art, blog" />
+    <meta name="theme-color" content="#e0e5ec" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="apple-touch-icon" href="/icon-192x192.png" />
