--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -28,8 +28,8 @@
       <nav class="nav-links">
         <div>
           <a href="/" class="nav-link">home</a>
-          <a href="/about" class="nav-link">about</a>
-          <a href="/gallery" class="nav-link">gallery</a>
+          <a href="/content/list" class="nav-link">list</a>
+          <a href="/content/gallery" class="nav-link">gallery</a>
           <a href="https://github.com/ploptaw" class="nav-link">
             <svg
               xmlns="http://www.w3.org/2000/svg"
