update: change link color in about section for better visibility

--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,7 @@ title: Home
     <article class="about-card">
       <p>
         This blog is a collection of my notes, articles, and tools.
-        <a href="/content/about" style="color: #585bc4">Read More →</a>
+        <a href="/content/about" style="color: #38389e">Read More →</a>
       </p>
     </article>
   </div>
