--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,6 @@ a:hover {
 
 .section-divider {
   border: none;
-  height: 1px;
   padding-bottom: 1rem;
 }
 
@@ -56,15 +55,14 @@ h1 {
 
 h2 {
   font-size: 1.8rem;
+  font-weight: 500;
   margin: 0.5rem 0 0.4rem;
   padding-bottom: 0.5rem;
-  color: var(--text-primary);
-  font-weight: 500;
 }
 .h3 {
   font-size: 1.2rem;
-  color: var(--text-primary);
   margin-bottom: 0.5rem;
+  color: var(--text-primary);
 }
 
 /* リスト */
@@ -118,16 +116,11 @@ td {
 .nav-link {
   font-size: 1.5rem;
   padding: 0.8rem 1.2rem;
-  text-decoration: none;
   color: var(--text-primary);
-  line-height: 1;
-  border-radius: var(--border-radius-small);
-  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 /* 記事 */
 article {
-  padding: 0;
   font-size: 1.2rem;
   line-height: 1.5;
 }
@@ -135,18 +128,17 @@ article {
 /* details */
 details summary {
   display: flex;
-  margin: 0;
   list-style: none;
 }
 
 details summary::before {
   content: "▶";
-  margin: 0.5rem;
+  margin: 0.9rem 0.2rem 0 0.2rem;
 }
 
 details[open] summary::before {
   content: "▼";
-  margin: 0.5rem;
+  margin: 0.9rem 0.2rem 0 0.2rem;
 }
 
 details[open] > div {
@@ -159,10 +151,10 @@ details summary::-webkit-details-marker {
 
 .neumorphic {
   background: var(--bg-color);
+  padding: 1rem;
   border-radius: 10px;
   box-shadow: var(--box-shadow);
   transition: box-shadow var(--transition-fast);
-  padding: 1rem;
 }
 
 @keyframes slideDown {
@@ -195,8 +187,7 @@ details summary::-webkit-details-marker {
 .dot-icon::after {
   content: "";
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  inset: auto 10px 10px auto;
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -233,7 +224,7 @@ details summary::-webkit-details-marker {
   font-size: 1rem;
   border: none;
   padding: var(--input-padding);
-  margin: 0rem 0.5rem 0.5rem 0;
+  margin: 0 0.5rem 0.5rem 0;
   background: var(--bg-color);
   border-radius: var(--border-radius-small);
   box-shadow: inset 2px 2px 4px var(--shadow-dark),
@@ -278,13 +269,11 @@ button {
 
   .nav-links {
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
+    flex-wrap: nowrap;
   }
 
   .nav-link {
-    padding: 0.2rem 0.5rem;
+    padding: 0 0.6rem;
     font-size: 1.3rem;
   }
 
