--- a/src/index.njk
+++ b/src/index.njk
@@ -13,8 +13,8 @@ title: Home
   <div class="about-link">
     <article class="about-card">
       <p>
-        This blog is a collection of my notes, articles, and tools.
-        <a href="/content/about" style="color: #38389e">Read More →</a>
+        This blog is a collection of my tools, articles, and notes.
+        <a href="/content/about" style="color: #38389e">Read more →</a>
       </p>
     </article>
   </div>
@@ -24,15 +24,17 @@ title: Home
     <details open>
       <summary><h2>Article</h2></summary>
       <div class="posts-grid">
-        {%- for post in collections.posts | reverse -%}
+        {%- for article in collections.articles | reverse -%} {%- if loop.index
+        <= 3 -%}
         <article class="post-card dot-icon post-icon neumorphic">
           <h3>
-            <a href="{{ post.url }}">{{ post.data.title }}</a>
+            <a href="{{ article.url }}">{{ article.data.title }}</a>
           </h3>
-          <time datetime="{{ post.date }}">{{ post.date | dateJP }}</time>
+          <time datetime="{{ article.date }}">{{ article.date | dateJP }}</time>
         </article>
-        {%- endfor -%}
+        {%- endif -%} {%- endfor -%}
       </div>
+      <a class="more" href="/content/articles">See more →</a>
     </details>
   </section>
 
@@ -42,7 +44,8 @@ title: Home
     <details open>
       <summary><h2>Tool</h2></summary>
       <div class="posts-grid">
-        {%- for tool in collections.tools | reverse -%}
+        {%- for tool in collections.tools | reverse -%} {%- if loop.index <= 3
+        -%}
         <article class="post-card dot-icon tool-icon neumorphic">
           <h3>
             <a href="{{ tool.url }}">{{ tool.data.title }}</a>
@@ -51,8 +54,9 @@ title: Home
             {{ tool.data.description }}
           </p>
         </article>
-        {%- endfor -%}
+        {%- endif -%} {%- endfor -%}
       </div>
+      <a class="more" href="/content/tools">See more →</a>
     </details>
   </section>
 
@@ -62,23 +66,25 @@ title: Home
     <details open>
       <summary><h2>Note</h2></summary>
       <div class="posts-grid">
-        {%- for note in collections.notes | reverse -%}
+        {%- for note in collections.notes | reverse -%} {%- if loop.index <= 3
+        -%}
         <article class="post-card dot-icon note-icon neumorphic">
           <h3>
             <a href="{{ note.url }}">{{ note.data.title }}</a>
           </h3>
           <time datetime="{{ note.date }}">{{ note.date | dateJP }}</time>
         </article>
-        {%- endfor -%}
+        {%- endif -%} {%- endfor -%}
       </div>
+      <a class="more" href="/content/notes">See more →</a>
     </details>
   </section>
-</main>
 
-<script>
-  function toggleVisibility(id) {
-    const element = document.getElementById(id);
-    element.style.visibility =
-      element.style.visibility === "hidden" ? "visible" : "hidden";
-  }
-</script>
+  <script>
+    function toggleVisibility(id) {
+      const element = document.getElementById(id);
+      element.style.visibility =
+        element.style.visibility === "hidden" ? "visible" : "hidden";
+    }
+  </script>
+</main>
