update: changed paths for article and tool collections, adjusted index page style. Removed unnecessary files.

--- a/src/_includes/tool.njk
+++ b/src/_includes/tool.njk
@@ -5,7 +5,7 @@ layout: base
 <main>
   <article>
     <h1>{{ title }}</h1>
-    <hr class="section-divider" />
+    <hr class="spacer" />
     {{ content | safe }}
   </article>
 </main>
