--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,20 +6,16 @@
     <meta name="description" content="{{ description or 'blog' }}" />
     <meta name="keywords" content="minecraft, pixel-art, blog" />
     <meta name="theme-color" content="#e0e5ec" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="apple-touch-icon" href="/icon-192x192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="/style.min.css" as="style" media="all" />
 
-    <!-- Open Graph meta tags -->
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:description" content="{{ description or 'blog' }}" />
-    <meta
-      property="og:image"
-      content="https://ploptaw-blog.netlify.app/icon-192x192.png"
-    />
+    <meta property="og:image" content="https://ploptaw-blog.netlify.app/icon-192x192.png"/>
     <meta property="og:url" content="{{ page.url | url }}" />
     <meta property="og:type" content="article" />
   </head>
@@ -31,18 +27,9 @@
           <a href="/content/list" class="nav-link">list</a>
           <a href="/content/gallery" class="nav-link">gallery</a>
           <a href="https://github.com/ploptaw" class="nav-link">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="bi bi-github"
-              width="16"
-              height="16"
-              fill="currentColor"
-              aria-label="GitHub"
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-github" width="16" height="16" fill="currentColor" aria-label="GitHub"            >
               <title>GitHub</title>
-              <path
-                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"
-              />
+              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
             </svg>
             GitHub
           </a>
