--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -6,10 +6,8 @@ layout: base
   <article>
     <h1>{{ title }}</h1>
     <time datetime="{{ date }}">{{ date | dateJP }}</time>
-    {% if tags %}
-    <span class="tags">{{ tags | join(', ') }}</span>
-    {% endif %}
-    <hr class="section-divider" />
+    {% if tags %}<span class="tags">{{ tags | join(', ') }}</span>{% endif %}
+    <hr class="spacer">
     {{ content | safe }}
   </article>
 </main>
