--- a/src/content/tags.njk
+++ b/src/content/tags.njk
@@ -12,14 +12,13 @@ permalink: /tags/{{ tag | slug }}/
     <h1>Tag: {{ tag }}</h1>
 
     <ul>
-      {%- for post in collections.all -%} {%- if post.data.tags and (tag in
-      post.data.tags) -%}
-      <li class="post-item" style="display: flex; margin-bottom: 0.5em">
-        <div style="display: flex; align-items: center">
+      {%- for post in collections[tag] -%}
+      <li class="post-item">
+        <div>
           <a href="{{ post.url }}">{{ post.data.title }}</a>
         </div>
       </li>
-      {%- endif -%} {%- endfor -%}
+      {%- endfor -%}
     </ul>
   </article>
 </main>
