update: change link color in index page for better visibility

--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ title: Home
     <article class="about-card">
       <p>
         This blog is a collection of my tools, articles, and notes.
-        <a href="/content/about" style="color: #7a5000">Read more →</a>
+        <a href="/content/about" style="color: #503400">Read more →</a>
       </p>
     </article>
   </div>
@@ -37,7 +37,7 @@ title: Home
     <a
       class="more"
       href="/content/list"
-      style="color: #7a5000; display: flex; padding: 1rem 0 0 1rem"
+      style="color: #503400; display: flex; padding: 1rem 0 0 1rem"
       >more →</a
     >
   </section>
