test:  change link color

--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,11 @@ title: Home
     <article class="about-card">
       <p>
         This blog is a collection of my tools, articles, and notes.
-        <a href="/content/about" style="color: #4c1769">Read more →</a>
+        <a
+          href="/content/about"
+          style="color: #2400b3; text-decoration: underline"
+          >Read more →</a
+        >
       </p>
     </article>
   </div>
@@ -37,7 +41,7 @@ title: Home
     <a
       class="more"
       href="/content/list"
-      style="color: #4c1769; display: flex; padding: 1rem 0 0 1rem"
+      style="color: #2400b3; display: flex; padding: 1rem 0 0 1rem"
       >more →</a
     >
   </section>
