--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -6,8 +6,8 @@ layout: base
   <article>
     <h1>{{ title }}</h1>
     <time datetime="{{ date }}">{{ date | dateJP }}</time>
-    {% if tags %}<span class="tags">{{ tags | join(', ') }}</span>{% endif %}
-    <hr class="spacer">
+    {% if tags %}<span class="tags">{{ tags | join(', ') }}</span
+    >{% endif %}
     {{ content | safe }}
   </article>
 </main>
